# backpack

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  autopo.yaml  bench_out.txt  benchmark_report.html  benchmark_results.json  benchmark_suite.py  build.ps1  build.py  build_test.bat  build_tests.bat  check_embedding.py  configure.bat  gemma4_gguf_stdout.txt  gemma4_stderr.txt  gemma4_stdout.txt  gemma4_stdout2.txt  goal.md  ort_all_layers_trace.py  ort_l0_trace.py  package.json  phi4_stderr.txt  phi4_stdout.txt  profile.html  profile_decode.py  start.bat  temp_bench.txt  test_dp4a.wgsl  webgpu-backend.patch
.claude/: CLAUDE.md
app/llm/: CMakeLists.txt  main.cpp
benchmarks/: bench_gpu_ceiling.py  bench_matmul_128x64.py  bench_matmul_128x64_f16.py  bench_matmul_8x8.py  bench_matmul_8x8_bk16.py  bench_matmul_dbuf.py  bench_matmul_f16_opt.py  bench_matmul_optimized.py  bench_matmul_tiled_f16.py  bench_matmul_transposed.py  bench_matmul_variants.py  bench_matmul_vec2_f16.py  bench_smem_ceiling.py  bench_workgroup_sweep.py  benchmark_config.json  run_benchmark.py  run_llamacpp.py  run_ort_webgpu.py  test_run_benchmark.py  test_run_llamacpp.py  workgroup_sweep_results.json
compiler/: __init__.py  compile_model.py  gdn_kernel.py  gen_wgsl_shaders.py  kernels.py  sdxl_unet.py
docs/: HLD - Copy.md  HLD.md  agents.md  arch.md  benchmark-comparison.md  dawn_subgroup_matrix_bug_report.md  dawn_subgroup_matrix_cpp_repro_outline.cc  dawn_subgroup_matrix_cpp_repro_outline.md  dawn_subgroup_matrix_min_repro.py  dawn_subgroup_matrix_raw_repro.py  fast-decode.md  graph-capture.md  kv-cache.md  llamacpp-design.md  llamacpp-vulkan-analysis.md  manual.md  model-arch-catalog.md  opt-guide.md  self-evolution-framework.md  todo.md  triton-webgpu.md
engine/: CMakeLists.txt  engine.cpp  gguf_loader.cpp  gguf_loader.h  gpu_context.cpp  gpu_context.h  json_parser.cpp  model_runner.cpp  model_runner.h  profile_html.cpp  tokenizer.h  wgsl_shaders.h
engine/cpp/: CMakeLists.txt  clock_calibration.cpp  engine.cpp  json_parser.h  model_runner.cpp  model_runner.h  test_sizes.cpp
engine/python/: __main__.py  gguf_engine.py
evolution/: README.md  __init__.py  agent.py  benchmark_llamacpp.py  benchmark_ort.py  bootstrap-agent.ps1  domain.py  experiment.py  learned_tasks.json  milestone.py  models.json  policy.py  provision_winrm.ps1  provisioner.py  refresh_llamacpp.ps1  seed-observations.json  server.py  store.py  studies.json
model_parser/: __init__.py  gguf_parser.py  onnx_parser.py  resolver.py
models/: compile_model.py  gguf_engine.py
runtime/: CMakeLists.txt  _build.bat  backpack.cpp  backpack.h  build_now.bat  clock_calibration.cpp  do_build.bat  engine.cpp  execution_context.cpp  execution_context.h  gen_wgsl_shaders.py  gguf_loader.cpp  gguf_loader.h  gpu_context.cpp  gpu_context.h  graph_executor.cpp  graph_executor.h  lm_session.cpp  lm_session.h  mapped_file.h  model_runner.cpp  model_runner.h  onnx_loader.cpp  onnx_loader.h  onnx_tokenizer.cpp  onnx_tokenizer.h  op_test_runner.cpp  profile_html.cpp  quants_iq_tables.h  read_gguf_meta.py  run_test.bat  runtime.cpp  test_output.txt  tokenizer.cpp  tokenizer.h  wgsl_shaders.h
runtimes/cpp/: CMakeLists.txt  backpack.cpp  backpack.h  cpu_profiler.h  engine.cpp  gen_wgsl_shaders.py  gguf_loader.cpp  gguf_loader.h  gpu_context.cpp  gpu_context.h  graph_executor.cpp  graph_executor.h  model_runner.cpp  model_runner.h  onnx_loader.cpp  onnx_loader.h  onnx_tokenizer.cpp  onnx_tokenizer.h  op_test_runner.cpp  profile_html.cpp  profile_html.h  runtime.cpp  safetensors_loader.h  tokenizer.cpp  wgsl_shaders.h  wgsl_template.h
runtimes/cpp/kernels/shared/: add_rms_norm_batched.wgsl  bidirectional_attn.wgsl  binary_elementwise.wgsl  binary_elementwise_f16.wgsl  cast_f16_to_f32.wgsl  cast_f32_to_f16.wgsl  concat_2input.wgsl  conv2d.wgsl  conv_transpose2d.wgsl  conv_transpose2d_f16.wgsl  embed_gather.wgsl  equal_op.wgsl  gather_elements.wgsl  gqa_decode.wgsl  group_norm.wgsl  instance_norm.wgsl  kv_cache_append.wgsl  layer_norm.wgsl  qmoe_matmul_q4.wgsl  resize_nearest.wgsl  rope_inplace.wgsl  rotary_embedding.wgsl  scale.wgsl  scatter_elements.wgsl  skip_rmsnorm.wgsl  softmax.wgsl  swiglu.wgsl  topk.wgsl  unary_elementwise.wgsl  unary_elementwise_f16.wgsl  weighted_add_indirect.wgsl  where_select.wgsl
runtimes/cpp/ops/: attention.cpp  conv.cpp  elementwise.cpp  fusion.cpp  matmul.cpp  moe.cpp  norm.cpp  shape.cpp
scripts/: build_backpack.bat  build_dawn.bat  clean_build_backpack.bat  probe_all_gguf.py  quick_test.bat  results.json  results.md  run_perf.bat  test_matrix.py  update_dawn.bat
shaders/: hello.wgsl
src/: argmax.h  bench_backpack.cpp  buffer_pool.h  buffer_utils.h  chat_template.h  dispatch.h  ffn.h  generate_result.h  gguf_parser.h  gpu_context.cpp  gpu_context.h  inference.h  lm_head.h  main.cpp  mmap_file.h  model_arch.h  model_config.h  onnx_inference.h  onnx_loader.h  onnx_runtime.h  reference_dequant.h  reference_matmul.h  sampling.h  shader_utils.h  tensor.h  tokenizer.h  transformer_layer.h  weight_loader.h
tests/: batched_prefill.test.js  bench_dequant.cpp  bench_matmul.cpp  bench_matmul_gpu.cpp  fused_qkv.test.js  inference.test.js  project.test.js  rmsnorm.test.js  rmsnorm_scaled.test.js  test_attention.py  test_attention_gpu.cpp  test_batched_matmul.cpp  test_batched_matmul_gpu.cpp  test_bench_workgroup_sweep.py  test_buffer_pool.cpp  test_chat_template.cpp  test_dequant_q4_k_m.cpp  test_dequant_q4_k_m.py  test_dequant_q8_0.cpp  test_dequant_q8_0.py  test_dispatch.cpp  test_elementwise_shaders.cpp  test_embed_f16_to_f32.py  test_ffn_gpu.cpp  test_flash_attention.py  test_flash_attention_gpu.cpp  test_fused_gate_up_silu.py  test_fused_qkv.py  test_gguf_inference_smoke.cpp  test_gguf_inference_smoke_gpt_oss.cpp  test_gguf_inference_smoke_granite.cpp  test_gguf_inference_smoke_internlm2.cpp  test_gguf_inference_smoke_nemotron.cpp  test_gguf_inference_smoke_vulkan.cpp  test_gguf_parser.cpp  test_gpu_context_backend.cpp  test_kernels.py  test_kv_cache.py  test_kv_cache_gpu.cpp  test_lm_head_gpu.cpp  (+35 more)
(+490 files in other folders)
